# openskud

./: Dockerfile  README.md  docker-compose.yml
server/: export.php  index.php  monthly_table.php
source/: CMakeLists.txt  lib.cpp  main.cpp
